Fixed bottom margin under experience box, fixed spacing issues on the file to make it more readable

--- a/index.css
+++ b/index.css
@@ -76,9 +76,6 @@ html, body {
     background-color: #2c4c3b;
     font-family: Montserrat;
     color: #90EE90;
-    /* border-radius: 10px; */
-    /* border: solid; */
-    /* border-color: black; */
 }
 
 #about-title {
@@ -121,7 +118,6 @@ html, body {
 #button-container {
     display: flex;
     justify-content: center;
-
 }
 
 .projects-button {
@@ -170,14 +166,10 @@ html, body {
     margin-top: 100px;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 100px;
     padding-bottom: 100px;
     background-color: #2c4c3b;
     font-family: Montserrat;
     color: #90EE90;
-    /* border-radius: 10px; */
-    /* border: solid; */
-    /* border-color: black; */
 }
 
 #experience-title {
@@ -194,7 +186,6 @@ html, body {
 .footer {
     height: 65px;
     display: flex;
-    /* position: fixed; */
     justify-content: space-around;
     margin-top: 5px;
     bottom: 0;
